--- a/sections/como_comprar.html
+++ b/sections/como_comprar.html
@@ -12,11 +12,13 @@
         <header>
             <nav class="navbar navbar-light bg-light fixed-top">
                 <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <img src="../Assets/Logo.jpg" alt="logo" id="logo">
-                <!-- cuidado tamaño -->
+                    <div class="navbar">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <img src="../Assets/Logo.jpg" alt="logo" id="logo">
+                        <!-- cuidado tamaño -->
+                    </div>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -45,8 +47,8 @@
             </div>
         </nav>
         </header>
-            <div>
-                <h3>Venta por WhatsApp</h3>
+            <div class="title">
+                <h3 style="color: white">Venta por WhatsApp</h3>
             </div>
     </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
