HTML Cómo comprar

--- a/sections/como_comprar.html
+++ b/sections/como_comprar.html
@@ -16,7 +16,7 @@
                         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-                        <img src="../Assets/Logo.jpg" alt="logo" id="logo">
+                       <a href="../index.html"> <img src="../Assets/Logo.png" alt="Logo" id="logo"></a>
                         <!-- cuidado tamaño -->
                     </div>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -47,10 +47,61 @@
             </div>
         </nav>
         </header>
+<main>
+        <div>
             <div class="title">
                 <h3 style="color: white">Venta por WhatsApp</h3>
             </div>
-    </body>
+            <div>
+                <div>
+                    <div>
+                        <img src="../Assets/Truck.png" alt="Envíos">
+                        <span>Envíos</span>
+                    </div>
+                    <p>Por Correo Argentino a todo el país
+                        Vía moto mensajería a CABA y GBA
+                        Pick Up: Boedo (CABA)</p>
+            </div>
+            <div>
+                <div>
+                    <img src="../Assets/Card.png" alt="CARD">
+                    <span>Métodos de pago</span>
+                </div>
+                <p>Transferencia bancaria
+                    Mercado Pago
+                    Tarjeta de crédito</p>
+            </div>
+            <div>
+                <img src="../Assets/Devolucion.png" alt="Devoluciones">
+                <span>Devoluciones</span>
+            </div>
+            <p>
+                No se aceptan cambios ni devoluciones por otro talle o color
+            </p>
+        </div>
+        <button>
+            <div>
+                <img src="../Assets/Wpp.png" alt="wpp">
+                <span>Comprar</span>
+            </div>
+        </button>
+    </div>
+</main>
+<footer>
+    <div>
+        <div>
+            <img src="../Assets/Fb.png" alt="Facebook">
+            <img src="../Assets/Ig.png" alt="Instagram">
+            <img src="../Assets/Black_wpp.png" alt="Wpp">
+        </div>
+        <div>
+            <img src="../Assets/copy.png" alt="">
+            <p>2020 Alma Tienda. Todos los derechos reservados</p>
+        </div>
+    </div>
+</footer>
+
+</body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </html>
