--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <img src="./Assets/Logo.jpg" alt="logo" id="logo">
+           <a href="index.html"> <img src="./Assets/Logo.png" alt="Logo" id="logo"></a>
             <!-- cuidado tamaño -->
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
@@ -28,13 +28,10 @@
                     </form>
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="./sections/productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./sections/como_comprar.html">Cómo Comprar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./sections/productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./sections/contacto.html">Contacto</a>
@@ -45,6 +42,14 @@
         </div>
     </nav>
     </header>
+    <main>
+        <div>
+            <img src="./Assets/mono_Alma_1.png" alt="Mono_1">
+            <div>
+                <h2>Primavera/Verano</h2>
+            </div>
+        </div>
+    </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
