Agrego productos a home

--- a/index.html
+++ b/index.html
@@ -48,6 +48,137 @@
             <div>
                 <h2>Primavera/Verano</h2>
             </div>
+            <div>
+            <!-- 15 cards -->
+                <div class="row row-cols-1 row-cols-md-2 g-4">
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Palazzo y remera Gardenia.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Palazzo y remera Gardenia</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Musculosa y short Lilo.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Musculosa y short Lilo</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Remerón y pantalón Dalia verde militar.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Remerón y pantalón Dalia</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/mono_Alma_1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Mono Alma</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Mono Amapolas.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Mono Amapolas</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Mono Iris 1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Mono Iris</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Mono Jacarandá.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Mono Jacarandá</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Mono Magnolia.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Mono Magnolia</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Vesrtido Fresia 1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Vesrtido Fresia</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Vestido Azalea rosa 2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Vestido Azalea</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Vestido Begonia.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Vestido Begonia</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Vestido Cala.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Vestido Cala</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Vestido Jazmin 1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Vestido Jazmin</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Vestido Melissa 1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Vestido Melissa</h5>
+                          <span class="card-text">$Precio</span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
         </div>
     </main>
 </body>
