--- a/sections/productos.html
+++ b/sections/productos.html
@@ -15,7 +15,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <img src="../Assets/Logo.jpg" alt="logo" id="logo">
+            <a href="../index.html"> <img src="../Assets/Logo.png" alt="Logo" id="logo"></a>
             <!-- cuidado tamaño -->
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
@@ -45,6 +45,239 @@
         </div>
     </nav>
     </header>
+    <main>
+    <!-- 27 productos -->
+    <div >
+        <span>Filtrar</span>
+    </div>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Vestido Melissa 1.jpg" class="card-img-top" alt="Vestido Melissa">
+            <div class="card-body">
+              <h5 class="card-title">Vestido Melissa</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Vestido Jazmin 1.jpg" class="card-img-top" alt="Vestido Jazmin">
+            <div class="card-body">
+              <h5 class="card-title">Vestido Jazmin</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Vestido Cala.jpg" class="card-img-top" alt="Vestido Cala">
+            <div class="card-body">
+              <h5 class="card-title">Vestido Cala</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Vestido Begonia.png" class="card-img-top" alt="Vestido Begonia">
+            <div class="card-body">
+              <h5 class="card-title">Vestido Begonia</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Vestido Azalea rosa 2.png" class="card-img-top" alt="Vestido Azalea">
+            <div class="card-body">
+              <h5 class="card-title">Vestido Azalea</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Vesrtido Fresia 1.png" class="card-img-top" alt="Vestido Fresia">
+            <div class="card-body">
+              <h5 class="card-title">Vestido Fresia</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Remerón y pantalón Dalia verde militar.png" class="card-img-top" alt="Remerón y pantalón Dalia">
+            <div class="card-body">
+              <h5 class="card-title">Remerón y pantalón Dalia</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Palazzo y remera Gardenia.png" class="card-img-top" alt="Conjunto Gardenia">
+            <div class="card-body">
+              <h5 class="card-title">Palazzo y remera Gardenia</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Remera Gardenia.png" class="card-img-top" alt="Remera Gardenia">
+            <div class="card-body">
+              <h5 class="card-title">Remera Gardenia</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Palazzo Gardenia.png" class="card-img-top" alt="Palazzo Gardenia">
+            <div class="card-body">
+              <h5 class="card-title">Palazzo Gardenia</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Musculosa y short Lilo.png" class="card-img-top" alt="Musculosa y short Lilo">
+            <div class="card-body">
+              <h5 class="card-title">Musculosa y short Lilo</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/mono_Alma_1.png" class="card-img-top" alt="Mono Alma">
+            <div class="card-body">
+              <h5 class="card-title">Mono Alma</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Mono Magnolia.jpg" class="card-img-top" alt="Mono Magnolia">
+            <div class="card-body">
+              <h5 class="card-title">Mono Magnolia</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Mono Jacarandá.png" class="card-img-top" alt="Mono Jacarandá">
+            <div class="card-body">
+              <h5 class="card-title">Mono Jacarandá</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Mono Iris 1.png" class="card-img-top" alt="Mono Iris">
+            <div class="card-body">
+              <h5 class="card-title">Mono Iris</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Mono Amapolas.png" class="card-img-top" alt="Mono Amapolas">
+            <div class="card-body">
+              <h5 class="card-title">Mono Amapolas</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Palazo Alerce.png" class="card-img-top" alt="Palazo Alerce">
+            <div class="card-body">
+              <h5 class="card-title">Palazo Alerce</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Pantalón Lilo.png" class="card-img-top" alt="Pantalón Lilo">
+            <div class="card-body">
+              <h5 class="card-title">Pantalón Lilo</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Remera Alameda.png" class="card-img-top" alt="Remera Alameda">
+            <div class="card-body">
+              <h5 class="card-title">Remera Alameda</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Sweater Cerezo.jpg" class="card-img-top" alt="Sweater Cerezo">
+            <div class="card-body">
+              <h5 class="card-title">Sweater Cerezo</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Sweater Almendro marrón.jpg" class="card-img-top" alt="Sweater Almendro">
+            <div class="card-body">
+              <h5 class="card-title">Sweater Almendro</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Capa-Acacia-beige-2.png" class="card-img-top" alt="Capa Acacia">
+            <div class="card-body">
+              <h5 class="card-title">Capa Acacia</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Tapado-Álamo-terracota-2.png" class="card-img-top" alt="Tapado Álamo">
+            <div class="card-body">
+              <h5 class="card-title">Tapado Álamo</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Tapado Tule verde inglés.png" class="card-img-top" alt="Tapado Tule">
+            <div class="card-body">
+              <h5 class="card-title">Tapado Tule</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="../Assets/Vestido Nogal beige.png" class="card-img-top" alt="Vestido Nogal">
+            <div class="card-body">
+              <h5 class="card-title">Vestido Nogal</h5>
+              <span class="card-text">$Precio</span>
+            </div>
+          </div>
+        </div>
+    </div>
+    </main>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
