--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <img src="./Assets/Palazzo y remera Gardenia.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Palazzo y remera Gardenia</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$7700</span>
                         </div>
                       </div>
                     </div>
@@ -65,7 +65,7 @@
                         <img src="./Assets/Musculosa y short Lilo.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Musculosa y short Lilo</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$6000</span>
                         </div>
                       </div>
                     </div>
@@ -74,7 +74,25 @@
                         <img src="./Assets/Remerón y pantalón Dalia verde militar.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Remerón y pantalón Dalia</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$7000</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Palazzo Gardenia.png" class="card-img-top" alt="Palazzo Gardenia">
+                        <div class="card-body">
+                          <h5 class="card-title">Palazzo Gardenia</h5>
+                          <span class="card-text">$4200</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col">
+                      <div class="card">
+                        <img src="./Assets/Remera Gardenia.png" class="card-img-top" alt="Remera Gardenia">
+                        <div class="card-body">
+                          <h5 class="card-title">Remera Gardenia</h5>
+                          <span class="card-text">$3500</span>
                         </div>
                       </div>
                     </div>
@@ -83,7 +101,7 @@
                         <img src="./Assets/mono_Alma_1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Mono Alma</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$6000</span>
                         </div>
                       </div>
                     </div>
@@ -92,7 +110,7 @@
                         <img src="./Assets/Mono Amapolas.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Mono Amapolas</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$5200</span>
                         </div>
                       </div>
                     </div>
@@ -101,7 +119,7 @@
                         <img src="./Assets/Mono Iris 1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Mono Iris</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$6100</span>
                         </div>
                       </div>
                     </div>
@@ -110,7 +128,7 @@
                         <img src="./Assets/Mono Jacarandá.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Mono Jacarandá</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$6200</span>
                         </div>
                       </div>
                     </div>
@@ -119,7 +137,7 @@
                         <img src="./Assets/Mono Magnolia.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Mono Magnolia</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$6500</span>
                         </div>
                       </div>
                     </div>
@@ -128,7 +146,7 @@
                         <img src="./Assets/Vesrtido Fresia 1.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Vesrtido Fresia</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$5000</span>
                         </div>
                       </div>
                     </div>
@@ -137,7 +155,7 @@
                         <img src="./Assets/Vestido Azalea rosa 2.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Vestido Azalea</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$4500</span>
                         </div>
                       </div>
                     </div>
@@ -146,7 +164,7 @@
                         <img src="./Assets/Vestido Begonia.png" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Vestido Begonia</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$6900</span>
                         </div>
                       </div>
                     </div>
@@ -155,7 +173,7 @@
                         <img src="./Assets/Vestido Cala.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Vestido Cala</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$6900</span>
                         </div>
                       </div>
                     </div>
@@ -164,7 +182,7 @@
                         <img src="./Assets/Vestido Jazmin 1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Vestido Jazmin</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$6000</span>
                         </div>
                       </div>
                     </div>
@@ -173,7 +191,7 @@
                         <img src="./Assets/Vestido Melissa 1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Vestido Melissa</h5>
-                          <span class="card-text">$Precio</span>
+                          <span class="card-text">$6500</span>
                         </div>
                       </div>
                     </div>
