--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
     </header>
     <main>
         <div>
-            <img src="./Assets/mono_Alma_1.png" alt="Mono_1">
+            <img class="row row-cols-1 row-cols-1 g-4 portada" src="./Assets/mono_Alma_1.png" alt="Mono_1">
             <div>
                 <h2>Primavera/Verano</h2>
             </div>
             <div>
             <!-- 15 cards -->
-                <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="row row-cols-1 row-cols-2 g-4">
                     <div class="col">
                       <div class="card">
                         <img src="./Assets/Palazzo y remera Gardenia.png" class="card-img-top" alt="...">
