--- a/sections/productos.html
+++ b/sections/productos.html
@@ -27,14 +27,11 @@
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
                     </form>
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                    </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="#">Productos</a>
+                      </li>
                     <li class="nav-item">
                         <a class="nav-link" href="como_comprar.html">Cómo Comprar</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contacto.html">Contacto</a>
@@ -47,10 +44,11 @@
     </header>
     <main>
     <!-- 27 productos -->
-    <div >
-        <span>Filtrar</span>
+    <div class="filtro">
+      <img style="margin-left:10px ;" src="../Assets/Filtrar.png" alt="">
+        <span style="margin-left:15px ;">Filtrar</span>
     </div>
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="row row-cols-1 row-cols-2 g-4">
         <div class="col">
           <div class="card">
             <img src="../Assets/Vestido Melissa 1.jpg" class="card-img-top" alt="Vestido Melissa">
