Cargo html de cada producto

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div>
             <!-- 15 cards -->
-                <div class="row row-cols-1 row-cols-2 g-4">
+                <div class="row row-cols-1 row-cols-2 g-4" style="max-width: 380px;">
                     <div class="col">
                       <div class="card">
                         <img src="./Assets/Palazzo y remera Gardenia.png" class="card-img-top" alt="...">
