--- a/sections/productos.html
+++ b/sections/productos.html
@@ -51,7 +51,7 @@
     <div class="row row-cols-1 row-cols-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="../Assets/Vestido Melissa 1.jpg" class="card-img-top" alt="Vestido Melissa">
+            <a href="./products_details/Vestido_Melissa.html"><img src="../Assets/Vestido Melissa 1.jpg" class="card-img-top" alt="Vestido Melissa"></a>
             <div class="card-body">
               <h5 class="card-title">Vestido Melissa</h5>
               <span class="card-text">$6500</span>
@@ -60,7 +60,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Vestido Jazmin 1.jpg" class="card-img-top" alt="Vestido Jazmin">
+            <a href="../sections/products_details/Vestido_Jazmin.html"><img src="../Assets/Vestido Jazmin 1.jpg" class="card-img-top" alt="Vestido Jazmin"></a>
             <div class="card-body">
               <h5 class="card-title">Vestido Jazmin</h5>
               <span class="card-text">$6000</span>
@@ -69,7 +69,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Vestido Cala.jpg" class="card-img-top" alt="Vestido Cala">
+            <a href="../sections/products_details/Vestido_Cala.html">
+            <img src="../Assets/Vestido Cala.jpg" class="card-img-top" alt="Vestido Cala"></a>
             <div class="card-body">
               <h5 class="card-title">Vestido Cala</h5>
               <span class="card-text">$6900</span>
@@ -78,7 +79,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Vestido Begonia.png" class="card-img-top" alt="Vestido Begonia">
+            <a href="../sections/products_details/Vestido_Begonia.html">
+            <img src="../Assets/Vestido Begonia.png" class="card-img-top" alt="Vestido Begonia"></a>
             <div class="card-body">
               <h5 class="card-title">Vestido Begonia</h5>
               <span class="card-text">$6900</span>
@@ -87,7 +89,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Vestido Azalea rosa 2.png" class="card-img-top" alt="Vestido Azalea">
+            <a href="../sections/products_details/Vestido_Azalea.html">
+            <img src="../Assets/Vestido Azalea rosa 2.png" class="card-img-top" alt="Vestido Azalea"></a>
             <div class="card-body">
               <h5 class="card-title">Vestido Azalea</h5>
               <span class="card-text">$4500</span>
@@ -96,7 +99,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Vesrtido Fresia 1.png" class="card-img-top" alt="Vestido Fresia">
+            <a href="../sections/products_details/Vestido_Fresia.html">
+            <img src="../Assets/Vesrtido Fresia 1.png" class="card-img-top" alt="Vestido Fresia"></a>
             <div class="card-body">
               <h5 class="card-title">Vestido Fresia</h5>
               <span class="card-text">$5000</span>
@@ -105,7 +109,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Remerón y pantalón Dalia verde militar.png" class="card-img-top" alt="Remerón y pantalón Dalia">
+            <a href="../sections/products_details/Combo_Dalia.html">
+            <img src="../Assets/Remerón y pantalón Dalia verde militar.png" class="card-img-top" alt="Remerón y pantalón Dalia"></a>
             <div class="card-body">
               <h5 class="card-title">Remerón y pantalón Dalia</h5>
               <span class="card-text">$7000</span>
@@ -114,7 +119,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Palazzo y remera Gardenia.png" class="card-img-top" alt="Conjunto Gardenia">
+            <a href="../sections//products_details/Combo_Gardenia.html">
+            <img src="../Assets/Palazzo y remera Gardenia.png" class="card-img-top" alt="Conjunto Gardenia"></a>
             <div class="card-body">
               <h5 class="card-title">Palazzo y remera Gardenia</h5>
               <span class="card-text">$7700</span>
@@ -123,7 +129,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Remera Gardenia.png" class="card-img-top" alt="Remera Gardenia">
+            <a href="../sections/products_details/Remera_Gardenia.html">
+            <img src="../Assets/Remera Gardenia.png" class="card-img-top" alt="Remera Gardenia"></a>
             <div class="card-body">
               <h5 class="card-title">Remera Gardenia</h5>
               <span class="card-text">$3500</span>
@@ -132,7 +139,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Palazzo Gardenia.png" class="card-img-top" alt="Palazzo Gardenia">
+            <a href="../sections/products_details/Palazzo_Gardenia.html">
+            <img src="../Assets/Palazzo Gardenia.png" class="card-img-top" alt="Palazzo Gardenia"></a>
             <div class="card-body">
               <h5 class="card-title">Palazzo Gardenia</h5>
               <span class="card-text">$4200</span>
@@ -141,7 +149,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Musculosa y short Lilo.png" class="card-img-top" alt="Musculosa y short Lilo">
+            <a href="../sections/products_details/Combo_Lilo.html">
+            <img src="../Assets/Musculosa y short Lilo.png" class="card-img-top" alt="Musculosa y short Lilo"></a>
             <div class="card-body">
               <h5 class="card-title">Musculosa y short Lilo</h5>
               <span class="card-text">$6000</span>
@@ -150,7 +159,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/mono_Alma_1.png" class="card-img-top" alt="Mono Alma">
+            <a href="../sections//products_details/Mono_Alma.html">
+            <img src="../Assets/mono_Alma_1.png" class="card-img-top" alt="Mono Alma"></a>
             <div class="card-body">
               <h5 class="card-title">Mono Alma</h5>
               <span class="card-text">$Precio</span>
@@ -159,7 +169,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Mono Magnolia.jpg" class="card-img-top" alt="Mono Magnolia">
+            <a href="../sections/products_details/Mono_Magnolia.html">
+            <img src="../Assets/Mono Magnolia.jpg" class="card-img-top" alt="Mono Magnolia"></a>
             <div class="card-body">
               <h5 class="card-title">Mono Magnolia</h5>
               <span class="card-text">$6000</span>
@@ -168,7 +179,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Mono Jacarandá.png" class="card-img-top" alt="Mono Jacarandá">
+            <a href="../sections/products_details/Mono_Jacaranda.html">
+            <img src="../Assets/Mono Jacarandá.png" class="card-img-top" alt="Mono Jacarandá"></a>
             <div class="card-body">
               <h5 class="card-title">Mono Jacarandá</h5>
               <span class="card-text">$6200</span>
@@ -177,7 +189,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Mono Iris 1.png" class="card-img-top" alt="Mono Iris">
+            <a href="../sections/products_details/Mono_Iris.html">
+            <img src="../Assets/Mono Iris 1.png" class="card-img-top" alt="Mono Iris"></a>
             <div class="card-body">
               <h5 class="card-title">Mono Iris</h5>
               <span class="card-text">$6100</span>
@@ -186,7 +199,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Mono Amapolas.png" class="card-img-top" alt="Mono Amapolas">
+            <a href="../sections/products_details/Mono_Amapolas.html">
+            <img src="../Assets/Mono Amapolas.png" class="card-img-top" alt="Mono Amapolas"></a>
             <div class="card-body">
               <h5 class="card-title">Mono Amapolas</h5>
               <span class="card-text">$5200</span>
@@ -195,7 +209,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Palazo Alerce.png" class="card-img-top" alt="Palazo Alerce">
+            <a href="../sections/products_details/Palazo_Alerce.html">
+            <img src="../Assets/Palazo Alerce.png" class="card-img-top" alt="Palazo Alerce"></a>
             <div class="card-body">
               <h5 class="card-title">Palazo Alerce</h5>
               <span class="card-text">$3600</span>
@@ -204,7 +219,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Pantalón Lilo.png" class="card-img-top" alt="Pantalón Lilo">
+            <a href="../sections/products_details/Pantalón_Lilo.html">
+            <img src="../Assets/Pantalón Lilo.png" class="card-img-top" alt="Pantalón Lilo"></a>
             <div class="card-body">
               <h5 class="card-title">Pantalón Lilo</h5>
               <span class="card-text">$3600</span>
@@ -213,7 +229,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Remera Alameda.png" class="card-img-top" alt="Remera Alameda">
+            <a href="../sections/products_details/Remera_Alameda.html">
+            <img src="../Assets/Remera Alameda.png" class="card-img-top" alt="Remera Alameda"></a>
             <div class="card-body">
               <h5 class="card-title">Remera Alameda</h5>
               <span class="card-text">$2880</span>
@@ -222,7 +239,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Sweater Cerezo.jpg" class="card-img-top" alt="Sweater Cerezo">
+            <a href="../sections/products_details/Sweater_Cerezo.html">
+            <img src="../Assets/Sweater Cerezo.jpg" class="card-img-top" alt="Sweater Cerezo"></a>
             <div class="card-body">
               <h5 class="card-title">Sweater Cerezo</h5>
               <span class="card-text">$2750</span>
@@ -231,7 +249,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Sweater Almendro marrón.jpg" class="card-img-top" alt="Sweater Almendro">
+            <a href="../sections/products_details/Sweater_Almendro.html">
+            <img src="../Assets/Sweater Almendro marrón.jpg" class="card-img-top" alt="Sweater Almendro"></a>
             <div class="card-body">
               <h5 class="card-title">Sweater Almendro</h5>
               <span class="card-text">$3300</span>
@@ -240,7 +259,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Capa-Acacia-beige-2.png" class="card-img-top" alt="Capa Acacia">
+            <a href="../sections/products_details/Capa_Acacia.html">
+            <img src="../Assets/Capa-Acacia-beige-2.png" class="card-img-top" alt="Capa Acacia"></a>
             <div class="card-body">
               <h5 class="card-title">Capa Acacia</h5>
               <span class="card-text">$10500</span>
@@ -249,7 +269,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Tapado-Álamo-terracota-2.png" class="card-img-top" alt="Tapado Álamo">
+            <a href="../sections/products_details/Tapado_Alamo.html">
+            <img src="../Assets/Tapado-Álamo-terracota-2.png" class="card-img-top" alt="Tapado Álamo"></a>
             <div class="card-body">
               <h5 class="card-title">Tapado Álamo</h5>
               <span class="card-text">$11600</span>
@@ -258,7 +279,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Tapado Tule verde inglés.png" class="card-img-top" alt="Tapado Tule">
+            <a href="../sections/products_details/Tapado_Tule.html">
+            <img src="../Assets/Tapado Tule verde inglés.png" class="card-img-top" alt="Tapado Tule"></a>
             <div class="card-body">
               <h5 class="card-title">Tapado Tule</h5>
               <span class="card-text">$12700</span>
@@ -267,7 +289,8 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../Assets/Vestido Nogal beige.png" class="card-img-top" alt="Vestido Nogal">
+            <a href="../sections/products_details/Vestido_Nogal.html">
+            <img src="../Assets/Vestido Nogal beige.png" class="card-img-top" alt="Vestido Nogal"></a>
             <div class="card-body">
               <h5 class="card-title">Vestido Nogal</h5>
               <span class="card-text">$4600</span>
