Finalización html productos

--- a/sections/products_details/Vestido_Azalea.html
+++ b/sections/products_details/Vestido_Azalea.html
@@ -87,6 +87,7 @@
           </div>
           <div>
             <h3>Vestido Azalea</h3>
+            <p>Vestido corto y amplio, confeccionado en morley. De mangas cortas y terminaciones en volados.</p>
             <div>
               <h3>$4500	
               </h3>
