--- a/sections/products_details/Vestido_Begonia.html
+++ b/sections/products_details/Vestido_Begonia.html
@@ -63,6 +63,7 @@
           </div>
           <div>
             <h3>Vestido Begonia</h3>
+            <p>Vestido largo de morley con cuello redondo, mangas cortas y bolsillos laterales</p>
             <div>
               <h3>$6900</h3>
               <h4>Transferencia/Débito</h4>
