--- a/sections/products_details/Vestido_Cala.html
+++ b/sections/products_details/Vestido_Cala.html
@@ -63,6 +63,7 @@
           </div>
           <div>
             <h3>Vestido Cala</h3>
+            <p>Vestido largo de mangas cortas, confeccionado en crepe viscosa. Tiene cuello redondo y bolsillos laterales.</p>
             <div>
               <h3>$6900</h3>
               <h4>Transferencia/Débito</h4>
