--- a/sections/products_details/Vestido_Fresia.html
+++ b/sections/products_details/Vestido_Fresia.html
@@ -67,6 +67,7 @@
           </div>
           <div>
             <h3>Vestido Fresia</h3>
+            <p>Vestido largo de lino. Con escote V en frente y espalda. Tiene tajos y bolsillos laterales. Viene con jaretas en cintura con terminales para ajustar</p>
             <div>
               <h3>$5000</h3>
               <h4>Transferencia/Débito</h4>
