--- a/sections/products_details/Vestido_Melissa.html
+++ b/sections/products_details/Vestido_Melissa.html
@@ -75,6 +75,8 @@
           </div>
           <div>
               <h3>Vestido Melissa</h3>
+              <p>Vestido largo confeccionado en crepe viscosa. Tiene cuello V, mangas cortas y bolsillos laterales.
+              </p>
               <div>
                 <h3>$6500</h3>
                 <h4>Transferencia/Débito</h4>
