--- a/sections/products_details/Vestido_Nogal.html
+++ b/sections/products_details/Vestido_Nogal.html
@@ -80,6 +80,7 @@
           </div>
           <div>
             <h3>Vestido Nogal</h3>
+            <p>Vestido manga larga, de lanilla morley. Con cuello polera y bolsillos laterales.</p>
             <div>
               <h3>$4600</h3>
               <h4>Transferencia/Débito</h4>
