--- a/sections/products_details/Combo_Dalia.html
+++ b/sections/products_details/Combo_Dalia.html
@@ -48,27 +48,38 @@
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="../../Assets/Remerón y pantalón Dalia verde militar.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Verde militar</h5>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="../../Assets/Remerón y pantalón Dalia verde militar (1).png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Verde militar</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="../../Assets/Remerón y pantalón Dalia camel.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Camel</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="../../Assets/Remerón y pantalón Dalia camel (1).png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Camel</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="../../Assets/Remerón y pantalón Dalia camel (2).png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Camel</h5>
                 </div>
               </div>
             </div>
@@ -82,19 +93,20 @@
             </button>
           </div>
           <div>
-            <h3>Producto</h3>
+            <h3>Conjunto Dalia</h3>
+            <p>Confeccionado en morley. Es un pantalón recto, con bolsillos laterales y cordón en la cintura. Remera oversize con sisas caídas</p>
             <div>
-              <h3>$Precio</h3>
+              <h3>$7000</h3>
               <h4>Transferencia/Débito</h4>
             </div>
             <div>
-              <h3>$Precio</h3>
+              <h3>$8800</h3>
               <h4>Crédito</h4>
             </div>
             <div>
               <h4>Color</h4>
-              <h5>-Color</h5>
-              <h5>-Color</h5>
+              <h5>-Verde militar</h5>
+              <h5>-Camel</h5>
             </div>
         </div>
     </main>
