--- a/sections/products_details/Mono_Alma.html
+++ b/sections/products_details/Mono_Alma.html
@@ -47,29 +47,13 @@
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-                </div>
+                <img src="../../Assets/mono_Alma_1.png" class="d-block w-100" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
+                <img src="../../Assets/Mono Alma 2.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -82,19 +66,19 @@
             </button>
           </div>
           <div>
-            <h3>Producto</h3>
+            <h3>Mono Alma</h3>
+            <p>Confeccionado en twill, una tela súper suave y fresca. Tiene escote en V y botones en el frente. Con bolsillos laterales y lazo en la cintura para ajustar.</p>
             <div>
-              <h3>$Precio</h3>
+              <h3>$6000</h3>
               <h4>Transferencia/Débito</h4>
             </div>
             <div>
-              <h3>$Precio</h3>
+              <h3>$7700</h3>
               <h4>Crédito</h4>
             </div>
             <div>
               <h4>Color</h4>
-              <h5>-Color</h5>
-              <h5>-Color</h5>
+              <h5>-Terracota</h5>
             </div>
         </div>
     </main>
