--- a/sections/products_details/Mono_Jacaranda.html
+++ b/sections/products_details/Mono_Jacaranda.html
@@ -46,30 +46,10 @@
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item" data-bs-interval="2000">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
+                <img src="../../Assets/Mono Jacarandá.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -82,19 +62,19 @@
             </button>
           </div>
           <div>
-            <h3>Producto</h3>
+            <h3>Mono Jacarandá</h3>
+            <p>Mono largo de morley con cuello V, mangas 3/4 y lazo en la cintura. Tiene bolsillos laterales.</p>
             <div>
-              <h3>$Precio</h3>
+              <h3>$6200</h3>
               <h4>Transferencia/Débito</h4>
             </div>
             <div>
-              <h3>$Precio</h3>
+              <h3>$7900</h3>
               <h4>Crédito</h4>
             </div>
             <div>
               <h4>Color</h4>
-              <h5>-Color</h5>
-              <h5>-Color</h5>
+              <h5>-Azul</h5>
             </div>
         </div>
     </main>
