--- a/sections/products_details/Sweater_Almendro.html
+++ b/sections/products_details/Sweater_Almendro.html
@@ -51,25 +51,19 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="../../Assets/Sweater Almendro Camel.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Camel</h5>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="../../Assets/Sweater Almendro marrón.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Marrón</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
+                <img src="../../Assets/Sweater-Almendro-tres-colores.png" class="d-block w-100" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -82,19 +76,21 @@
             </button>
           </div>
           <div>
-            <h3>Producto</h3>
+            <h3>Sweater Almendro</h3>
+            <p>Confeccionado en lana acrílica. Tiene un trenzado de rombos y cuello tortuga. Es un modelo oversize, por lo tanto es bien amplio.</p>
             <div>
-              <h3>$Precio</h3>
+              <h3>$3300</h3>
               <h4>Transferencia/Débito</h4>
             </div>
             <div>
-              <h3>$Precio</h3>
+              <h3>$4200</h3>
               <h4>Crédito</h4>
             </div>
             <div>
               <h4>Color</h4>
-              <h5>-Color</h5>
-              <h5>-Color</h5>
+              <h5>-Camel</h5>
+              <h5>-Marrón</h5>
+              <h5>-Gris Melange</h5>
             </div>
         </div>
     </main>
