--- a/sections/products_details/Tapado_Tule.html
+++ b/sections/products_details/Tapado_Tule.html
@@ -51,24 +51,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="../../Assets/Tapado Tule verde inglés.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Verde Inglés</h5>
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="../../Assets/Tapado Tule negro.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Negro</h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="../../Assets/Tapado Tule negro 2.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Negro</h5>
                 </div>
               </div>
             </div>
@@ -82,19 +79,20 @@
             </button>
           </div>
           <div>
-            <h3>Producto</h3>
+            <h3>Tapado Tule</h3>
+            <p>De paño liso, forrado por dentro. Con bolsillos laterales y un botón en el frente.</p>
             <div>
-              <h3>$Precio</h3>
+              <h3>$12700</h3>
               <h4>Transferencia/Débito</h4>
             </div>
             <div>
-              <h3>$Precio</h3>
+              <h3>$16300</h3>
               <h4>Crédito</h4>
             </div>
             <div>
               <h4>Color</h4>
-              <h5>-Color</h5>
-              <h5>-Color</h5>
+              <h5>-Verde Inglés</h5>
+              <h5>-Negro</h5>
             </div>
         </div>
     </main>
