--- a/sections/products_details/Vestido_Jazmin.html
+++ b/sections/products_details/Vestido_Jazmin.html
@@ -83,6 +83,7 @@
           </div>
           <div>
             <h3>Vestido Jazmin</h3>
+            <p>Vestido largo de mangas cortas, confeccionado en crepe viscosa. Tiene cuello redondo y bolsillos laterales</p>
             <div>
               <h3>$6000</h3>
               <h4>Transferencia/Débito</h4>
