--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" style="border:none;">
               <img src="./Assets/Hamburguer.png" alt="" class="hamburguer">
             </button>
-           <a href="index.html"> <img src="./Assets/Logo.png" alt="Logo" id="logo"></a>
+           <!-- <a href="index.html"> <img src="./Assets/Logo.png" alt="Logo" id="logo"></a> -->
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
                     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
